Создала секцию и блоки

--- a/index.html
+++ b/index.html
@@ -9,8 +9,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
-<body>
 
+<body>
+    <section class="main">
+        <div class="container">
+            <div class="left">
+                <img src="img/Rectangle2.png" alt="screenshot">
+            </div>
+
+            <div class="right">
+                <h2>Main Features</h2>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
