Начал работу над promo left

--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="heroarea.css">
 </head>
 <body>
-
-    
+    <section class="heroarea">
+        <div class="container">
+            <div class="promo-left">
+                <h1>Your Favorite Food delivery Partner.</h1>
+                <p>Food Delivery is a thriving business and there are many opportunities for this Businesses as its Growing.
+                </p>
+                <img src="img/image 11.png" alt="">
+                <img src="img/image 12.png" alt="">
+            </div>
+            <div class="promo-right"></div>
+        </div>
+    </section>
 </body>
 </html>
