Сделал promo-left

--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto:wght@300&family=Work+Sans:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="heroarea.css">
+    <link rel="stylesheet" href="css/heroarea.css">
 </head>
 <body>
     <section class="heroarea">
         <div class="container">
             <div class="promo-left">
-                <h1>Your Favorite Food delivery Partner.</h1>
+                <h1>Your Favourite Food delivery Partner.</h1>
                 <p>Food Delivery is a thriving business and there are many opportunities for this Businesses as its Growing.
                 </p>
                 <img src="img/image 11.png" alt="">
