--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                 <img src="img/image 11.png" alt="">
                 <img src="img/image 12.png" alt="">
             </div>
-            <div class="promo-right"></div>
+            <div class="promo-right">
+                <img src="img/Group 34.png" alt="">
+            </div>
         </div>
     </section>
 </body>
