--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
     <header>
-        <p>Hungry</p>
-        <nav>
-          <ul>
+      <div class="container">
+      <p>Hungry</p>
+          <ul class="nav">
             <li><a href="#">Home</a></li>
             <li><a href="#">Features</a></li>
             <li><a href="#">Testimonial</a></li>
             <li><a href="#">Blog</a></li>
           </ul>
-        </nav>
+      </div>
     </header>
     
 </body>
