--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="#">Testimonial</a></li>
             <li><a href="#">Blog</a></li>
           </ul>
+          <button>Download Now</button>
       </div>
     </header>
     
