--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <h1>Your Favourite Food delivery Partner.</h1>
                 <p>Food Delivery is a thriving business and there are many opportunities for this Businesses as its Growing.
                 </p>
-                <img src="img/image 11.png" alt="">
-                <img src="img/image 12.png" alt="">
+                <a href=""><img src="img/image 11.png" alt=""></a>
+                <a href=""><img src="img/image 12.png" alt=""></a>
             </div>
             <div class="promo-right">
                 <img src="img/Group 34.png" alt="">
