--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/food.css">
 </head>
 <body>
+<section class="food">
+    <div class="container">
+        <div class="content">
+            <h3>Food Always Available</h3>
+            <a href="">Download Now</a>
+        </div>
+    </div>
 
-    
+</section>
 </body>
 </html>
