--- a/index.html
+++ b/index.html
@@ -8,9 +8,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/feedback.css">
 </head>
 <body>
+    <section class="feedback">
+        <div class="container">
+            <p class="open">Testimonials</p>
+            <div class="GrandBox1"><img src="img/feedback-f550dd4d6f62ddb2d08c6a9ed5691c3a.png">
+            <p class="name">Jhon Smith</p>
+            <p class="Description">“ Food Delivery is a thriving business and there are many opportunities for this Businesses as its Growing. Food Delivery is a thriving business ”</p></div>
 
-    
+            <div class="GrandBox2"><img src="img/feedback-19dbfb770a3df47917ddefb92fef09b1.png">
+            <p class="name">Jhon Smith</p>
+            <p class="Description">“ Food Delivery is a thriving business and there are many opportunities for this Businesses as its Growing. Food Delivery is a thriving business ”</p></div>
+
+            <div class="GrandBox3"><img src="img/feedback-a15ec02a62e7b8519dbeb11ee25bc152.png">
+            <p class="name">Jhon Smith</p>
+            <p class="Description">“ Food Delivery is a thriving business and there are many opportunities for this Businesses as its Growing. Food Delivery is a thriving business ”</p></div>
+        </div>
+    </section>
 </body>
 </html>
