Доработана ветка main

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main-features.css">
     <link rel="stylesheet" href="main.css">
 </head>
 
@@ -14,11 +15,38 @@
     <section class="main">
         <div class="container">
             <div class="left">
-                <img src="img/Rectangle2.png" alt="screenshot">
+                <img src="img/Group 34.png" alt="screenshot" class="screenshot">
             </div>
 
+            
+
             <div class="right">
-                <h2>Main Features</h2>
+                <h3>Main Features</h3>
+                <table class="table">
+                    <tr>
+                        <td rowspan="2" class="ellipse"><img src="img/Group 35.png" alt="pictures"></td>
+                        <td class="td-name">Quick Delivery</td>
+                    </tr>
+                    <tr>
+                        <td class="td-text">Food Delivery is a thriving business and there are many opportunities for this Businesses as its Growing.</td>
+                    </tr>
+
+                    <tr>
+                        <td rowspan="2" class="ellipse"><img src="img/Group 36.png" alt="pictures"></td>
+                        <td class="td-name">Fast Payment</td>
+                    </tr>
+                    <tr>
+                        <td class="td-text">Food Delivery is a thriving business and there are many opportunities for this Businesses as its Growing.</td>
+                    </tr>
+
+                    <tr>
+                        <td rowspan="2" class="ellipse"><img src="img/Group 37.png" alt="pictures"></td>
+                        <td class="td-name">Get Reviews</td>
+                    </tr>
+                    <tr>
+                        <td class="td-text">Food Delivery is a thriving business and there are many opportunities for this Businesses as its Growing.</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </section>
