--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/company-logo.css">
 </head>
 <body>
-
+    <div class="container">
+        <div class="company-logo">
+            <p>100+ Companies Use our App</p>
+            <img src="img/Group 32.png" alt="">
+            <img src="img/Group 31.png" alt="">
+            <img src="img/Group 30.png" alt="">
+            <img src="img/Group 29.png" alt="">
+        </div>
+    </div>
     
 </body>
 </html>
