--- a/index.html
+++ b/index.html
@@ -8,9 +8,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/blog.css">
 </head>
-<body>
 
-    
-</body>
-</html>
+<section class="blog">
+<div class="conteiner">
+    <h3>Update News</h3>
+    <div class="blog-left">
+        <img src="img/Rectangle 7.png" alt="picture">
+        <h4>Healthy Food</h4>
+        <p>Food Delivery is a thriving business and there are many opportunities for this Businesses as its Growing.</p>
+        <a href="">Read more</a>
+
+    </div>
+    <div class="blog-center">
+        <img src="img/Rectangle 7 (1).png" alt="picture">
+        <h4>Healthy Food</h4>
+        <p>Food Delivery is a thriving business and there are many opportunities for this Businesses as its Growing.</p>
+        <a href="">Read more</a>
+    </div>
+    <div class="blog-right">
+        <img src="img/Rectangle 7 (2).png" alt="picture">
+        <h4>Healthy Food</h4>
+        <p>Food Delivery is a thriving business and there are many opportunities for this Businesses as its Growing.</p>
+        <a href="">Read more</a>
+    </div>
+</div>
