--- a/index.html
+++ b/index.html
@@ -1,16 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hungry app</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+  </head>
+  <body>
+    <footer class="footer">
+      <div class="container">
+        <div class="help">
+          <div class="info">
+            <h4 class="hungry">Hungry.</h4>
+            <p class="info_text">
+              Food Delivery is a thriving business and there are many
+              opportunities for this Businesses as its Growing.
+            </p>
+          </div>
 
-    
-</body>
+          <div class="support">
+            <h5 class="h5_footer">Support</h5>
+            <ul class="List">
+              <li class="li_footer">
+                <a href="" class="a_footer">Privacy & Policy</a>
+              </li>
+              <li class="li_footer">
+                <a href="" class="a_footer">Terms & Condition</a>
+              </li>
+              <li class="li_footer">
+                <a href=" " class="a_footer">Guidelines</a>
+              </li>
+              <li class="li_footer"><a href="" class="a_footer">Help</a></li>
+            </ul>
+          </div>
+          <div class="usefull_links">
+            <h5 class="h5_footer">Usefull Links</h5>
+            <ul class="List">
+              <li class="li_footer">
+                <a href="" class="a_footer">Privacy & Policy</a>
+              </li>
+              <li class="li_footer">
+                <a href="" class="a_footer">Terms & Condition</a>
+              </li>
+              <li class="li_footer">
+                <a href="" class="a_footer">Guidelines</a>
+              </li>
+              <li class="li_footer"><a href="" class="a_footer">Help</a></li>
+            </ul>
+          </div>
+          <div class="news_letter">
+            <h5 class="h5_footer">News Letter</h5>
+            <input type="email" placeholder="email" />
+            <input type="submit" placeholder="Subscribe" value="Subscribe" />
+            <ul class="List">
+              <li class="li_footer">
+                <a href="" class="a_footer">Guidelines</a>
+              </li>
+              <li class="li_footer"><a href="" class="a_footer">Help</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
