--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                     </tr>
                 </table>
             </div>
+    </section>
     <section class="feedback">
         <div class="container">
             <p class="open">Testimonials</p>
@@ -106,29 +107,28 @@
         </div>
     </section>
     <section class="food">
-    <div class="container">
-        <div class="content">
+        <div class="container">
+            <div class="content">
             <h3>Food Always Available</h3>
             <a href="">Download Now</a>
+            </div>
         </div>
-    </div>
     </section>
     <section class="blog">
     <div class="conteiner">
         <h3>Update News</h3>
-        <div class="blog-left">
-            <img src="img/Rectangle 7.png" alt="picture">
-            <h4>Healthy Food</h4>
-            <p>Food Delivery is a thriving business and there are many opportunities for this Businesses as its Growing.</p>
-            <a href="">Read more</a>
-
-        </div>
+            <div class="blog-left">
+                <img src="img/Rectangle 7.png" alt="picture">
+                <h4>Healthy Food</h4>
+                <p>Food Delivery is a thriving business and there are many opportunities for this Businesses as its Growing.</p>
+                <a href="">Read more</a>
+            </div>
         <div class="blog-center">
         <img src="img/Rectangle 7 (1).png" alt="picture">
         <h4>Healthy Food</h4>
         <p>Food Delivery is a thriving business and there are many opportunities for this Businesses as its Growing.</p>
         <a href="">Read more</a>
-    </div>
+        </div>
         <div class="blog-right">
             <img src="img/Rectangle 7 (2).png" alt="picture">
             <h4>Healthy Food</h4>
@@ -136,5 +136,6 @@
             <a href="">Read more</a>
         </div>
     </div>
+    </section>
 </body>
 </html>
